Problem statement and motivation version 0

--- a/project_description/Vej_Jenny-Margrethe.tex
+++ b/project_description/Vej_Jenny-Margrethe.tex
@@ -157,10 +157,32 @@ Jenny-Margrethe \textsc{Vej} - rwj935\\
 \vspace{-20mm}
 
 \section{Problem Statement}
+First part of this project will be to research on sleep patterns in the data collected by Social 
+Fabric\cite{Stopczynski2014}. This research will help us get an understanding on what kind of 
+sleep data is possible to collect ourself, and we will have some data to compare with. After this 
+we will conduct our own experiment on students, investigating how smartphones sees the 
+students sleeping patterns. With the data from this investigation we will examine how Digital 
+Cognitive Behavioural Therapy (DCBT) can be embedded in a ``intervention''. 
+We expect to end up with an app for the intervention, and we will conduct another experiment
+with the app to see if it is helping the students to get better sleeping patterns or not. 
 
 \section{Motivation}
+It is widely known that sleep is essential \cite{Gumbiner2012}, and sleep deprivation affects 
+us in many ways. It is also commonly known that students tend to skip a few hours of sleep to 
+get more out of the day. But skipping hours of sleep will most likely not do anything good - instead
+students get poorer performance in school \cite{Gilbert2010}. \\
+
+According to the central authority on Danish statistics, Statistics Denmark, every household in 
+Denmark owned at least one mobilephone in 2013 \cite{DanmarksStatistik2013}, and according 
+to a article in Dailymail that same year \cite{Woollaston2013}, we check our phone 110 times a 
+day and up to every 6 seconds in the evening. \\
+
+Knowing that almost everyone owns a mobilephone, and students tend to skip sleep to work more,
+we thought it would be great to investigate how we can use the mobilephone to improve our 
+sleeping patterns. 
 
 \section{Elaboration}
+
 
 \section{Learning Goals}
 	\begin{itemize}
@@ -168,7 +190,7 @@ Jenny-Margrethe \textsc{Vej} - rwj935\\
 		\item 
 	\end{itemize}
 
-\bibliographystyle{plainnat}
+%\bibliographystyle{plainnat}
 \bibliographystyle{unsrt}
 \bibliography{bibliography}
 
