--- a/project_description/Vej_Jenny-Margrethe.tex
+++ b/project_description/Vej_Jenny-Margrethe.tex
@@ -182,7 +182,16 @@ we thought it would be great to investigate how we can use the mobilephone to im
 sleeping patterns. 
 
 \section{Elaboration}
+Using already existing apps for mobilephones we will investigate students sleeping patterns over a 
+time period of four weeks. When collecting the data we will also have sessions with the participants,
+having them answering questionnaires and share their thoughts on the experiment so far. After the 
+period is done, we will investigate the data collected and look for patterns. And based on this, we 
+will create an intervention application for the mobilephones using DCBT and self-efficacy.\\
 
+The intervention created will be tested for another period of four weeks, hopefully with the same 
+students that participated in the first part. If that is not possible, we will have other students with 
+a similar profile participating instead. The project will be conducted in collaboration with a psychologist 
+specialised in sleep. 
 
 \section{Learning Goals}
 	\begin{itemize}
