Summary from interview

--- a/project_description/Vej_Jenny-Margrethe.tex
+++ b/project_description/Vej_Jenny-Margrethe.tex
@@ -195,8 +195,11 @@ specialised in sleep.
 
 \section{Learning Goals}
 	\begin{itemize}
-		\item 
-		\item 
+		\item Collect relevant material from already existing data collections 
+		\item Create an experiment to collect data on students sleeping patterns using mobilephones
+		\item Design a (personalised?), adaptive (digital) solution to support cognitive behavioural therapy for sleep deprivation 
+		\item Create a test experiment to evaluate on the designed solution
+		\item ??
 	\end{itemize}
 
 %\bibliographystyle{plainnat}
