--- a/project_description/Vej_Jenny-Margrethe.tex
+++ b/project_description/Vej_Jenny-Margrethe.tex
@@ -160,11 +160,11 @@ Jenny-Margrethe \textsc{Vej} - rwj935\\
 First part of this project will be to research on sleep patterns in the data collected by Social 
 Fabric\cite{Stopczynski2014}. This research will help us get an understanding on what kind of 
 sleep data is possible to collect ourself, and we will have some data to compare with. After this 
-we will conduct our own experiment on students, investigating how smartphones sees the 
-students sleeping patterns. With the data from this investigation we will examine how Digital 
-Cognitive Behavioural Therapy (DCBT) can be embedded in a ``intervention''. 
-We expect to end up with an app for the intervention, and we will conduct another experiment
-with the app to see if it is helping the students to get better sleeping patterns or not. 
+we will conduct our own experiment investigating the sleeping pattern of students using smartphones. 
+With the data from this investigation we will examine how Digital Cognitive Behavioural Therapy 
+(DCBT) can be embedded in a digital solution for mobilephones to help combat unhealthy behaviour in 
+students sleeping patterns. We expect the digital solution to be an application, and we will evaluate
+this through experiments and interviews. 
 
 \section{Motivation}
 It is widely known that sleep is essential \cite{Gumbiner2012}, and sleep deprivation affects 
@@ -183,23 +183,62 @@ sleeping patterns.
 
 \section{Elaboration}
 Using already existing apps for mobilephones we will investigate students sleeping patterns over a 
-time period of four weeks. When collecting the data we will also have sessions with the participants,
-having them answering questionnaires and share their thoughts on the experiment so far. After the 
-period is done, we will investigate the data collected and look for patterns. And based on this, we 
-will create an intervention application for the mobilephones using DCBT and self-efficacy.\\
+period of time of four weeks. While collecting data we will concurrently evaluate the experiment through 
+questionnaires and interviews with the participants. The collected data will be analysed to see if we
+can create a digital solution for mobilephones to help combat unhealthy behaviour in students sleeping
+patterns. \\
 
-The intervention created will be tested for another period of four weeks, hopefully with the same 
-students that participated in the first part. If that is not possible, we will have other students with 
-a similar profile participating instead. The project will be conducted in collaboration with a psychologist 
-specialised in sleep. 
+The digital solution created will be evaluated in another period of time of four weeks, hopefully with 
+the same students that participated in the first experiment. If it is not possible to get the same 
+participants, we will have other students with a similar profile participating instead. The project will be 
+conducted in collaboration with a psychologist specialised in sleep. 
 
 \section{Learning Goals}
 	\begin{itemize}
-		\item Collect relevant material from already existing data collections 
-		\item Create an experiment to collect data on students sleeping patterns using mobilephones
-		\item Design a (personalised?), adaptive (digital) solution to support cognitive behavioural therapy for sleep deprivation 
-		\item Create a test experiment to evaluate on the designed solution
-		\item ??
+		\item Describe and select relevant data from existing studies
+		\item Design and execute an experiment for collecting data on sleeping patters of students
+		\item Analyse sleeping patterns in order to detect anomalies and unhealthy patterns 
+		\item Design a digital solution for mobilephones to help combat unhealthy behaviour in students sleeping patterns
+		\item Evaluate the digital solution through experiments and interviews
+	\end{itemize}
+	
+\section{Time schedule}
+Preliminary time schedule for the project:
+	\begin{itemize}
+		\item \textbf{Litterature study} - 2 months (including August)
+			\begin{itemize}
+				\item Study existing literature on sleeping behavior
+				\item Select relevant data from existing studies (especially Social Fabric)
+			\end{itemize}	
+		\item \textbf{Set up experiment} - 1 month
+			\begin{itemize}
+				\item Find participants
+				\item Decide on how to measure the data needed
+				\item Look into small pilot studies to test different applications for measurements
+			\end{itemize}	
+		\item \textbf{Conduct experiment} - 1 month
+			\begin{itemize}
+				\item Suggested period of time: November 4, 2015 to December 2, 2015
+			\end{itemize}	
+		\item \textbf{Analyse results of experiment} - 1 month
+			\begin{itemize}
+				\item Detect anomalies and unhealthy sleeping patterns
+				\item Find hypothesises for a digital solution to help combat the unhealthy sleeping 
+				patterns   
+			\end{itemize}	
+		\item \textbf{Design the digital solution} - 3 months 
+			\begin{itemize}
+				\item Design and develop digital solution
+				\item Pilot tests on solution 
+			\end{itemize}	
+		\item \textbf{Conduct experiment with digital solution} - 1 month
+			\begin{itemize}
+				\item Suggested period of time: March 30, 2016 to April 27, 2016
+			\end{itemize}	
+		\item \textbf{Write project report} - concurrently with all other phases + 1.5 months
+			\begin{itemize}
+				\item Deadline for project is July 15, 2016, but I will try to have the report done for proofreading around June 20, 2016 
+			\end{itemize}	
 	\end{itemize}
 
 %\bibliographystyle{plainnat}
