--- a/project_description/Vej_Jenny-Margrethe.tex
+++ b/project_description/Vej_Jenny-Margrethe.tex
@@ -142,7 +142,7 @@
 %\begin{titlepage}
 
 \begin{center}
-\textsc{\Large Smartphone Perspective on Sleeping Patterns}\\[0.5cm] 
+\textsc{\Large Smartphones Ubiquitous Assessment of Individual Sleep Patterns}\\[0.5cm] 
 \textsc{\large Project description}\\[0.5cm] 
 
 %\vfill
@@ -157,10 +157,16 @@ Jenny-Margrethe \textsc{Vej} - rwj935\\
 \vspace{-20mm}
 
 \section{Problem Statement}
-First part of this project will be to research on sleep patterns in the data collected by Social 
+Sleep is a very important behavioral marker and lack of quality sleep relates to risk of deseases
+ \cite{Gumbiner2012}. Given the ubiquitous availability and use of smartphones, also as alarm 
+ clocks, in the first part of this thesis, we will investigate how data collected on smartphones 
+ can be leveraged for sleep patterns assessment of the owner. \\
+
+The data we will investigate is from the the data collected by Social 
 Fabric\cite{Stopczynski2014}. This research will help us get an understanding on what kind of 
-sleep data is possible to collect ourself, and we will have some data to compare with. After this 
-we will conduct our own experiment investigating the sleeping pattern of students using smartphones. 
+sleep data is possible to collect ubiquitously via a personal smartphone. After this 
+we will conduct our own experiment investigating accuracy and reliability of assessment of 
+sleeping patterns from smartphone data logs.  
 With the data from this investigation we will examine how Digital Cognitive Behavioural Therapy 
 (DCBT) can be embedded in a digital solution for mobilephones to help combat unhealthy behaviour in 
 students sleeping patterns. We expect the digital solution to be an application, and we will evaluate
@@ -178,15 +184,15 @@ to a article in Dailymail that same year \cite{Woollaston2013}, we check our pho
 day and up to every 6 seconds in the evening. \\
 
 Knowing that almost everyone owns a mobilephone, and students tend to skip sleep to work more,
-we thought it would be great to investigate how we can use the mobilephone to improve our 
-sleeping patterns. 
+we decided to investigate how we can use the mobilephone assess, and then provide an intervention to 
+improve our sleeping patterns. 
 
 \section{Elaboration}
 Using already existing apps for mobilephones we will investigate students sleeping patterns over a 
 period of time of four weeks. While collecting data we will concurrently evaluate the experiment through 
-questionnaires and interviews with the participants. The collected data will be analysed to see if we
-can create a digital solution for mobilephones to help combat unhealthy behaviour in students sleeping
-patterns. \\
+questionnaires and interviews with the participants. The collected data will be analysed to evaluate if we
+can create a digital solution for mobilephones to accurately assess and then combat unhealthy behaviour 
+in students sleeping patterns. \\
 
 The digital solution created will be evaluated in another period of time of four weeks, hopefully with 
 the same students that participated in the first experiment. If it is not possible to get the same 
@@ -196,7 +202,7 @@ conducted in collaboration with a psychologist specialised in sleep.
 \section{Learning Goals}
 	\begin{itemize}
 		\item Describe and select relevant data from existing studies
-		\item Design and execute an experiment for collecting data on sleeping patters of students
+		\item Design and execute an experiment for collecting accurate data on sleeping patters of students
 		\item Analyse sleeping patterns in order to detect anomalies and unhealthy patterns 
 		\item Design a digital solution for mobilephones to help combat unhealthy behaviour in students sleeping patterns
 		\item Evaluate the digital solution through experiments and interviews
@@ -237,7 +243,7 @@ Preliminary time schedule for the project:
 			\end{itemize}	
 		\item \textbf{Write project report} - concurrently with all other phases + 1.5 months
 			\begin{itemize}
-				\item Deadline for project is July 15, 2016, but I will try to have the report done for proofreading around June 20, 2016 
+				\item Deadline for project is July 15, 2016, but proofreading starts around June 20, 2016 
 			\end{itemize}	
 	\end{itemize}
 
