--- a/project_description/Vej_Jenny-Margrethe.tex
+++ b/project_description/Vej_Jenny-Margrethe.tex
@@ -159,18 +159,10 @@ Jenny-Margrethe \textsc{Vej} - rwj935\\
 \section{Problem Statement}
 Sleep is a very important behavioral marker and lack of quality sleep relates to risk of deseases
  \cite{Gumbiner2012}. Given the ubiquitous availability and use of smartphones, also as alarm 
- clocks, in the first part of this thesis, we will investigate how data collected on smartphones 
+ clocks, in this thesis, we will investigate how data collected on smartphones 
  can be leveraged for sleep patterns assessment of the owner. \\
 
-The data we will investigate is from the the data collected by Social 
-Fabric\cite{Stopczynski2014}. This research will help us get an understanding on what kind of 
-sleep data is possible to collect ubiquitously via a personal smartphone. After this 
-we will conduct our own experiment investigating accuracy and reliability of assessment of 
-sleeping patterns from smartphone data logs.  
-With the data from this investigation we will examine how Digital Cognitive Behavioural Therapy 
-(DCBT) can be embedded in a digital solution for mobilephones to help combat unhealthy behaviour in 
-students sleeping patterns. We expect the digital solution to be an application, and we will evaluate
-this through experiments and interviews. 
+The data we will investigate is from the the data collected by Social Fabric\cite{Stopczynski2014} and potentially from mQoL Living Lab\cite{mQOL}. This research will help us get an understanding on what kind of sleep data is possible to collect ubiquitously via a personal smartphone. After this we will conduct our own experiment investigating accuracy, timelines, reliability, and privacy aspects of assessment of sleeping patterns from smartphone data logs. We will involve university students for that purpose. With the data from this investigation we provide design implications for a solution for mobilephones to help combat unhealthy behaviour in students sleeping patterns.
 
 \section{Motivation}
 It is widely known that sleep is essential \cite{Gumbiner2012}, and sleep deprivation affects 
@@ -183,29 +175,23 @@ Denmark owned at least one mobilephone in 2013 \cite{DanmarksStatistik2013}, and
 to a article in Dailymail that same year \cite{Woollaston2013}, we check our phone 110 times a 
 day and up to every 6 seconds in the evening. \\
 
-Knowing that almost everyone owns a mobilephone, and students tend to skip sleep to work more,
-we decided to investigate how we can use the mobilephone assess, and then provide an intervention to 
-improve our sleeping patterns. 
+Knowing that almost everyone owns a mobilephone, and students tend to skip sleep to study more,
+we decided to investigate how we can use the mobilephone to assess, and then potentially provide an intervention to improve our sleeping patterns. 
 
 \section{Elaboration}
 Using already existing apps for mobilephones we will investigate students sleeping patterns over a 
-period of time of four weeks. While collecting data we will concurrently evaluate the experiment through 
-questionnaires and interviews with the participants. The collected data will be analysed to evaluate if we
-can create a digital solution for mobilephones to accurately assess and then combat unhealthy behaviour 
-in students sleeping patterns. \\
+period of time of 4 weeks. While collecting data we will concurrently evaluate the experiment through 
+questionnaires and interviews with the participants additionally to a wearable sleep tracker. The collected data will be analysed to evaluate its accuracy, speed and privacy aspects. \\
 
-The digital solution created will be evaluated in another period of time of four weeks, hopefully with 
-the same students that participated in the first experiment. If it is not possible to get the same 
-participants, we will have other students with a similar profile participating instead. The project will be 
-conducted in collaboration with a psychologist specialised in sleep. 
+The algorithm will be evaluated in an additional 4 weeks long study. We will derive design implications for an intervention based on the studies. 
 
 \section{Learning Goals}
 	\begin{itemize}
-		\item Describe and select relevant data from existing studies
-		\item Design and execute an experiment for collecting accurate data on sleeping patters of students
+		\item Describe and select relevant data from the existing studies
+		\item Design and execute an experiment for collecting accurate, timely data on sleeping patters of students, in privacy-aware manner
+		\item Evaluate an algorithm user studies
 		\item Analyse sleeping patterns in order to detect anomalies and unhealthy patterns 
-		\item Design a digital solution for mobilephones to help combat unhealthy behaviour in students sleeping patterns
-		\item Evaluate the digital solution through experiments and interviews
+		\item Provide design implications for a digital solution for mobilephones to help combat unhealthy behaviour in students sleeping patterns
 	\end{itemize}
 	
 \section{Time schedule}
@@ -213,28 +199,30 @@ Preliminary time schedule for the project:
 	\begin{itemize}
 		\item \textbf{Litterature study} - 2 months (including August)
 			\begin{itemize}
-				\item Study existing literature on sleeping behavior
+				\item Study existing literature on sleeping behavior and smartphone-based recognition of sleeping behaviour
 				\item Select relevant data from existing studies (especially Social Fabric)
 			\end{itemize}	
 		\item \textbf{Set up experiment} - 1 month
 			\begin{itemize}
-				\item Find participants
+				\item Draft and finalise ethical approval for participants 
+				\item Recruit participants
 				\item Decide on how to measure the data needed
 				\item Look into small pilot studies to test different applications for measurements
 			\end{itemize}	
 		\item \textbf{Conduct experiment} - 1 month
 			\begin{itemize}
-				\item Suggested period of time: November 4, 2015 to December 2, 2015
+				\item Suggested period of time: November 9, 2015 to December 6, 2015
 			\end{itemize}	
 		\item \textbf{Analyse results of experiment} - 1 month
 			\begin{itemize}
+				\item Evaluate accuracy, speed and privacy-awareness/violation of a solution
 				\item Detect anomalies and unhealthy sleeping patterns
 				\item Find hypothesises for a digital solution to help combat the unhealthy sleeping 
 				patterns   
 			\end{itemize}	
 		\item \textbf{Design the digital solution} - 3 months 
 			\begin{itemize}
-				\item Design and develop digital solution
+				\item Further improve the algorithm for sleep assessment 
 				\item Pilot tests on solution 
 			\end{itemize}	
 		\item \textbf{Conduct experiment with digital solution} - 1 month
