--- a/project_description/bibliography.bib
+++ b/project_description/bibliography.bib
@@ -2,12 +2,19 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jenny-Margrethe Vej at 2015-07-22 18:53:06 +0200 
+%% Created for Jenny-Margrethe Vej at 2015-09-07 17:22:02 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{mQOL,
+	Author = {Katarzyna Wac and Mattia Gustarini and Jerome Marchanoff and Marios Fanourakis and Christiana Tsiourti and Matteo Ciman and Jody Hausmann and Gerardo Pinar},
+	Date-Added = {2015-09-07 15:04:46 +0000},
+	Date-Modified = {2015-09-07 15:22:02 +0000},
+	Howpublished = {International Workshop on the Living Lab Approach for Successful Design of Services and Systems in eHealth (LivingLab'15), co-located with the IEEE HealthCom 2015, Boston, USA, October 2015.},
+	Title = {mQoL: Experiences of the 'Mobile Communications and Computing of Quality of Life' Living Lab}}
 
 @misc{DanmarksStatistik2013,
 	Author = {{Danmarks Statistik}},
