Frontpage - now better

--- a/forside_tex_ting/forside.tex
+++ b/forside_tex_ting/forside.tex
@@ -17,21 +17,25 @@
     \ULCornerWallPaper{1}{natbio-farve-grid-full.pdf}
     \ULCornerWallPaper{1}{diku-en.pdf}
     \begin{adjustwidth}{-3cm}{-1.5cm}
-    \vspace*{1cm}
-    \textbf{\Huge Master Thesis} \\
-    \vspace*{2.5cm} \\
+    \vspace*{3.5cm}
+ %   \textbf{\Huge Jenny-Margrethe Vej} \\
+ %   \vspace*{2.5cm} \\
     \textbf{\huge Smartphones Ubiqquitos Assessment of Individual Sleep Patterns} \\
     \vspace*{.1cm} \\
-%    {\huge July 15, 2016} \\
     \begin{tabbing}
+    \textbf{\Large Author} \\
     Jenny-Margrethe Vej ~~ \= \texttt{<jvej@di.ku.dk>} \\
-%    July 15, 2016
-    \\[11.7cm]
-    \textbf{\Large Supervisor} \\
-    Katarzyna Wac\> \texttt{<wac@di.ku.dk>} \\
     \vspace*{.1cm} \\
-  %  \textbf{\Large Date}\\
+    \textbf{\Large Supervisor} \\
+    Katarzyna Wac ~~~~~~~~~~~ \= \texttt{<wac@di.ku.dk>} \\
+    \vspace*{.1cm} \\
     July 15, 2016
+    \\[11.8cm]
+ %   \textbf{\Large Supervisor} \\
+ %   Katarzyna Wac\> \texttt{<wac@di.ku.dk>} \\
+ %   \vspace*{.1cm} \\
+  %  \textbf{\Large Date}\\
+ %   July 15, 2016
     \end{tabbing}
     \end{adjustwidth}
     \ClearWallPaper
