--- a/forside_tex_ting/forside.tex
+++ b/forside_tex_ting/forside.tex
@@ -20,7 +20,7 @@
     \vspace*{3.5cm}
  %   \textbf{\Huge Jenny-Margrethe Vej} \\
  %   \vspace*{2.5cm} \\
-    \textbf{\huge Smartphones Ubiqquitos Assessment of Individual Sleep Patterns} \\
+    \textbf{\Huge Smartphones Ubiquitos Assessment of Individual Sleep Patterns} \\
     \vspace*{.1cm} \\
     \begin{tabbing}
     \textbf{\Large Author} \\
@@ -30,7 +30,7 @@
     Katarzyna Wac ~~~~~~~~~~~ \= \texttt{<wac@di.ku.dk>} \\
     \vspace*{.1cm} \\
     July 15, 2016
-    \\[11.8cm]
+    \\[11.5cm]
  %   \textbf{\Large Supervisor} \\
  %   Katarzyna Wac\> \texttt{<wac@di.ku.dk>} \\
  %   \vspace*{.1cm} \\
