Disposition for thesis

--- a/Report/thesis_report.tex
+++ b/Report/thesis_report.tex
@@ -174,10 +174,32 @@
 \section{Introduction}
 
 \section{Previous / Related Work}
-Something about QoL + the data from Kates lab in Geneva and the data from DTU? Or do I create a chapter for each of them alone? 
+	\begin{itemize}
+		\item Check all articles you have printet etc. 
+		\item Goal of my work
+		\item Research questions
+	\end{itemize}
+	
+\section{Methods}
+	\begin{itemize}
+		\item Timeline
+		\item Experiments (high level description) 
+		\item Data available: 
+			\begin{itemize}
+				\item Something about QoL and Social Fabric ($\rightarrow$ initial idea of what to look for)
+				\item Own data
+			\end{itemize}
+	\end{itemize}
+	
+\section{Hypotheses}
 
 \section{Design of Experiment}
-Something general about the experiment and target group, and then some details (subchapters?) about the participants, the watches, the app to collect the data from the smartphones with, my initial surveys etc. 
+	\begin{itemize}
+		\item mQoL data + DTU data - how to analyse to get sleep
+		\item General stuff about experiment
+		\item General stuff about target group
+		\item Details about participants, watches, the Ping App, initial surveys etc. 
+	\end{itemize}
 
 \section{The Experiment}
 Something about how the experiment went. What challenges did I meet in those 4 weeks. What did I end up asking the participants about, etc. 
@@ -189,7 +211,7 @@ Write about accuracy, speed and privacy-awareness/violation of a solution. Detec
 Find hypothesises for a digital solution to help combat the unhealthy sleeping patterns, and explain the algorithm and the work behind it. 
 
 \section{Evaluation of Algorithm}
-Something about the second experiment in April. How did it go, what was the results regarding the algorithm etc. 
+Something about the second experiment in April. How did it go, what was the results regarding the algorithm (comparing with the first version). 
 
 \section{Design Implications}
 Provide design implications for a digital solution for mobilephones to help combat unhealthy behaviour in students sleeping patterns
