--- a/forside_tex_ting/forside.tex
+++ b/forside_tex_ting/forside.tex
@@ -20,7 +20,7 @@
     \vspace*{3.5cm}
  %   \textbf{\Huge Jenny-Margrethe Vej} \\
  %   \vspace*{2.5cm} \\
-    \textbf{\Huge Smartphones Ubiquitos Assessment of Individual Sleep Patterns} \\
+    \textbf{\huge Smartphones Ubiquitous Assessment of Individual Sleep Quality and Quantity} \\
     \vspace*{.1cm} \\
     \begin{tabbing}
     \textbf{\Large Author} \\
@@ -29,8 +29,8 @@
     \textbf{\Large Supervisor} \\
     Katarzyna Wac ~~~~~~~~~~~ \= \texttt{<wac@di.ku.dk>} \\
     \vspace*{.1cm} \\
-    July 15, 2016
-    \\[11.5cm]
+    November 11, 2016
+    \\[11.7cm]
  %   \textbf{\Large Supervisor} \\
  %   Katarzyna Wac\> \texttt{<wac@di.ku.dk>} \\
  %   \vspace*{.1cm} \\
