--- a/consent_form/forside_tex_ting/forside.tex
+++ b/consent_form/forside_tex_ting/forside.tex
@@ -29,8 +29,12 @@
     \textbf{\Large Supervisor} \\
     Katarzyna Wac ~~~~~~~~~~~ \= \texttt{<wac@di.ku.dk>} \\
     \vspace*{.1cm} \\
-%    July 15, 2016
-    \\[11cm]
+    \textbf{\Large Approval Date} \\
+    November 1, 2015\\
+    \vspace*{.1cm} \\
+    \textbf{\Large Expiration Date} \\
+    July 15, 2016
+    \\[9.3cm]
  %   \textbf{\Large Supervisor} \\
  %   Katarzyna Wac\> \texttt{<wac@di.ku.dk>} \\
  %   \vspace*{.1cm} \\
